--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "extends": "./tsconfig.path.json",
+  "include": ["src", "./"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
